Add username for Dockerhub 🙈

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ env:
   REGISTRY: ghcr.io
   DOCKERFILE: Dockerfile
   IMAGE_TAG: kizzycode/pingmon:latest
+  DOCKER_HUB_USER: kizzycode
 
 jobs:
   build-and-push-image:
