Renamed dockerfile to lowercase

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  DOCKERFILE: Dockerfile
+  DOCKERFILE: dockerfile
   IMAGE_TAG: kizzycode/pingmon:latest
   DOCKER_HUB_USER: kizzycode
 
