--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,24 +24,39 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      # Publish to ghcr.io
-      - name: Login to Docker registry
-        run: |
-          docker login --username "${{ github.actor }}" --password "${{ secrets.GITHUB_TOKEN }}" "${{ env.REGISTRY }}"
-      - name: Build the Docker image
-        run: |
-          docker build . --file "${{ env.DOCKERFILE }}" --tag "${{ env.REGISTRY }}/${{ env.IMAGE_TAG }}"
-      - name: Push the Docker image
-        run: |
-          docker push "${{ env.REGISTRY }}/${{ env.IMAGE_TAG }}"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      
+      # Publish to ghcr.io
+      - name: Log in to ghcr.io
+        uses: docker/login-action@v1
+        with:
+          registry: "${{ env.REGISTRY }}"
+          username: "${{ github.actor }}"
+          password: "${{ secrets.GITHUB_TOKEN }}"
+      
+      - name: Build and push docker to ghcr.io
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: "${{ env.REGISTRY }}/${{ env.IMAGE_TAG }}"
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/386
+      
+
       # Publish to dockerhub
-      - name: Login to Docker registry
-        run: |
-          docker login --username "${{ env.DOCKER_HUB_USER }}" --password "${{ secrets.DOCKER_HUB_TOKEN }}"
-      - name: Build the Docker image
-        run: |
-          docker build . --file "${{ env.DOCKERFILE }}" --tag "${{ env.IMAGE_TAG }}"
-      - name: Push the Docker image
-        run: |
-          docker push "${{ env.IMAGE_TAG }}"
+      - name: Log in to dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: "${{ env.DOCKER_HUB_USER }}"
+          password: "${{ secrets.DOCKER_HUB_TOKEN }}"
+      
+      - name: Build and push docker to dockerhub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: "${{ env.IMAGE_TAG }}"
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/386
